Fixed image not showing in profile, because i forgot to set the url

--- a/blogile/src/app/modules/user/user.component.scss
+++ b/blogile/src/app/modules/user/user.component.scss
@@ -6,7 +6,7 @@
   margin-top: 3%;
   margin-bottom: 3%;
 }
-#profile-image{
+.profile-image{
   width: 150px;
   height: 150px;
 }
